<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tayara.dijkstra.presentation.ui.dijkstra.DijkstraViewModel" />

        <import type="android.view.View" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/margin_small"
        tools:context="com.tayara.dijkstra.presentation.ui.dijkstra.DijkstraActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:onClick="@{(v) -> viewModel.startSolve()}"
            android:text="@string/run"
            android:visibility="@{viewModel.canStart}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <include
                android:id="@+id/startNode"
                layout="@layout/list_item_node"
                android:onClick="@{() -> viewModel.clearStartNode()}"
                android:visibility="@{viewModel.startNode == null ? View.GONE : View.VISIBLE}"
                app:node="@{viewModel.startNode}" />

            <include
                android:id="@+id/endNode"
                layout="@layout/list_item_node"
                android:onClick="@{() -> viewModel.clearEndNode()}"
                android:visibility="@{viewModel.endNode == null ? View.GONE : View.VISIBLE}"
                app:node="@{viewModel.endNode}" />

        </LinearLayout>


        <!-- Nodes -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{(v) -> viewModel.addNewNode()}"
                    android:text="@string/add_node" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/nodes"
                    android:textSize="@dimen/font_large"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nodes_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:loadData="@{viewModel.nodes}"
                tools:listitem="@layout/list_item_node" />

        </LinearLayout>


        <!-- Edges -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{() -> viewModel.addNewEdge()}"
                    android:text="@string/add_edge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/edges"
                    android:textSize="@dimen/font_large"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edges_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:loadData="@{viewModel.edges}"
                tools:listitem="@layout/list_item_edge" />

        </LinearLayout>

    </LinearLayout>

</layout>